services/headscale/04-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headscale
  namespace: headscale
spec:
  replicas: 1
  selector:
    matchLabels:
      app: headscale
  template:
    metadata:
      labels:
        app: headscale
    spec:
      containers:
        - name: headscale
          image: headscale/headscale:v0.27.1
          command: ["headscale", "serve"]
          volumeMounts:
            - name: config
              mountPath: /etc/headscale/
            - name: data
              mountPath: /var/lib/headscale
          ports:
            - containerPort: 8080
      volumes:
        - name: config
          configMap:
            name: headscale-config
        - name: data
          persistentVolumeClaim:
            claimName: headscale-pvc
