services/headscale/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headscale
  namespace: headscale
spec:
  ports:
    - port: 80
      targetPort: 8080
      name: http
  selector:
    app: headscale
