services/headscale/02-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: http2https
  namespace: headscale
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headscale-https
  namespace: headscale
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`headscale.niaefeup.pt`)
      kind: Rule
      services:
        - name: headscale
          port: 8080
  tls:
    secretName: headscale-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headscale-http
  namespace: headscale
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`headscale.niaefeup.pt`)
      kind: Rule
      services:
        - name: noop@internal
          kind: TraefikService
      middlewares:
      - name: http2https
