services/headscale/06-ingress-routes.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headscale-https
  namespace: headscale
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`headscale.niaefeup.pt`)
    kind: Rule
    services:
    - name: headscale
      port: 80

  tls:
    secretName: headscale-tls
